# chatml

./: .env.example  .gitignore  ARCHITECTURE.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.INCLUDE  OPENSOURCE_ANALYSIS.md  README.md  build_info.go  chatml  components.json  eslint.config.mjs  main.go  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
.build/root/: Makefile
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/workflows/: auto-add-to-project.yml  auto-label.yml  auto-tag-release.yml  ci.yml  deploy-docs.yml  project-automation.yml  release.yml
Godeps/: Godeps.json
agent-runner/: package-lock.json  package.json  pnpm-lock.yaml
agent-runner/.next/: trace  trace-build
agent-runner/src/: index.ts  rules.ts
agents/: github-monitor.yaml  linear-sync.yaml
assets/: assets_debug.go
backend/: .gitignore  go.mod  go.sum  main.go
backend/.next/: trace  trace-build
backend/agent/: agents.go  backend.go  backend_state.go  core_types.go  manager.go  manager_test.go  memory.go  parser.go  parser_test.go  pr_detector.go  pr_detector_test.go  process.go  process_test.go  provider.go  streaming_snapshot_test.go  (+1 more)
config/: Makefile  config.go  config.proto  config.toml  config_test.go  load.go  load_test.go
configuration/: configuration.go
core/: go.mod  go.sum  types.go
docs/: README.md  agent-runner-protocol.md  agent-sdk.md  claude-sdk-events.md  cloud-relay.md  conversation-architecture.md  data-models-persistence.md  frontend-rendering.md  git-worktrees.md  licensing-research.md  overview.md  plan-model-abstraction.md  plan-opensource-launch.md  plan-refactor-appstore.md  plan-refactor-page-tsx.md  product-overview.md  session-management.md  test-audit-findings.md  test-coverage-baseline.md  websocket-streaming.md
docs-site/: .gitignore  package-lock.json  package.json  tsconfig.json
models/: channel.go  connection.go  domain.go  group.go  message.go  online_user.go  user.go
processors/: processors.go
scripts/: changelog.sh  setup-signing.sh  setup-vercel-docs.sh
speech-cli/: Package.swift
src-tauri/: .env.example  Cargo.toml  Info.plist  splash.html  tauri.conf.json  tauri.dev.conf.json  tauri.release.conf.json
src-tauri/binaries/: chatml-speech-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  icons.rs  lib.rs  main.rs  menu.rs  sf_symbols.rs  sidecar.rs  speech.rs  state.rs  tray.rs  watcher.rs
util/: checksum.go  constant_delay.go  constant_delay_test.go  daemon.go  embed-static.sh  error_with_stacktrace.go  helpers.go  ip.go  nop_writer.go  retry.go  retry_test.go  retryable.go  sampling.go  strings.go  timeout_conn.go  timeout_conn_test.go  uname_linux.go  uname_unsupported.go
web/: Makefile  status.go  web.go
(+1516 files in other folders)
