[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-decorum = "1.1"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-pty = "0.1"
tauri-plugin-mcp-bridge = "0.8"
tauri-plugin-deep-link = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-clipboard-manager = "2"
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
notify = { version = "6", features = ["serde"] }
notify-debouncer-mini = "0.4"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
